pre correction ref et modele